--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -6,11 +6,20 @@
 SPHINXOPTS    ?=
 SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = source
-BUILDDIR      = ../docs
+BUILDDIR      = ../ReferentialGym-docs
+PDFBUILDDIR   = /tmp
+PDF     	  = ../documentation.pdf
 
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+latexpdf: 
+	$(SPHINXBUILD) -b latex "$(SOURCEDIR)" "$(PDFBUILDDIR)/latex" $(SPHINXOPTS)
+	@echo "Running LaTeX files through pdflatex..." 
+	make -C $(PDFBUILDDIR)/latex all-pdf 
+	cp $(PDFBUILDDIR)/latex/*.pdf $(PDF) 
+	@echo "pdflatex finished; see $(PDF)"
 
 .PHONY: help Makefile
 
