updating metrics, e.g. TopoSim2 to be faster. + removed Feat TopoSim2. + removed tc_discriminator by default when using BetaVAE. + setup TopoSim2 to be computed only at end of training (epoch-1).

--- a/zoo/referential-games+compositionality+disentanglement/wandb_dSprites_obverter_seeded_grid_Hinge_NLL_Descr_OC_0_3_Distr_41epochs.yaml
+++ b/zoo/referential-games+compositionality+disentanglement/wandb_dSprites_obverter_seeded_grid_Hinge_NLL_Descr_OC_0_3_Distr_41epochs.yaml
@@ -75,13 +75,15 @@ parameters:
                 values: [10]
 
         metric_epoch_period:
-                values: [5]
+                values: [10]
         nbr_train_points:
-                values: [10000]
+                values: [5000]
         nbr_eval_points:
-                values: [10000]
+                values: [5000]
         metric_batch_size:
                 values: [64]
+        parallel_TS_worker:
+                values: [128]
         dis_metric_resampling:
                 values: [True]
         metric_resampling:
